# knowledge-assistant

./: .gitignore  README.md
scaffold/: .env.example  pyproject.toml  quickstart.md  requirements.txt
scaffold/doc/implementation/: implementation.md  overview.md
scaffold/eval/question_bank/: questions.json
scaffold/frontend/: app.py
scaffold/frontend/pages/: 1_evaluation_dashboard.py  1_request_details.py  2_evaluation_dashboard.py  2_request_details.py
scaffold/src/knowledge_assistant/: config.py  log.py  models.py  progress.py  retrieval.py  telemetry.py
scaffold/src/knowledge_assistant/agent/: compressor.py  generator.py  greeter.py  intent.py  orchestrator.py  prompts.py  reply_logic.py
scaffold/src/knowledge_assistant/api/: deps.py  main.py  routes.py  schemas.py
scaffold/src/knowledge_assistant/evaluation/: evaluate.py  prompts.py  quality.py  question_gen.py
scaffold/src/knowledge_assistant/iam/: service.py
scaffold/src/knowledge_assistant/ingestion/: chunker.py  enricher.py  loader.py  markers.py  pipeline.py
scaffold/src/knowledge_assistant/mcp_server/: server.py
scaffold/src/knowledge_assistant/vectorstore/: base.py  memory_store.py  pinecone_store.py
scaffold/tests/: conftest.py  test_access_control.py  test_agent_flows.py  test_evaluation.py  test_iam.py  test_ingestion.py
